# voicechat_server

./: .gitignore  CMakeLists.txt  Doxyfile  Room.h  RoomManager.cc  RoomManager.h  build  chat_server  main.cc  protocol.h
html/: RoomManager_8cc.html  RoomManager_8h.html  RoomManager_8h_source.html  Room_8cc.html  Room_8h.html  Room_8h_source.html  UserConnection_8h.html  UserConnection_8h_source.html  annotated.html  classRoom-members.html  classRoom.html  classRoomManager-members.html  classRoomManager.html  classUserConnection-members.html  classUserConnection.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  main_8cc.html  menudata.js  protocol_8h.html  protocol_8h_source.html  structVoiceChatPacket-members.html  structVoiceChatPacket.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_2.js  files_2.js  files_3.js  functions_2.js  functions_4.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js
latex/: RoomManager_8cc.tex  RoomManager_8h.tex  Room_8cc.tex  Room_8h.tex  UserConnection_8h.tex  annotated.tex  classRoom.tex  classRoomManager.tex  classUserConnection.tex  files.tex  main_8cc.tex  protocol_8h.tex  refman.tex  structVoiceChatPacket.tex
scripts/: build.sh
src/: main.cc
src/room/: Room.cc  Room.h  RoomManager.h
src/user/: UserConnection.cc  UserConnection.h
